// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles random extra properties 1`] = `
"GET bad-path responded 500 Just the worst: 

Message:

  Server error 1

Additional info:

{
    \\"randomProp\\": 12
}

Magento PHP stack trace: 

Server error 1 trace
"
`;

exports[`pretty prints a JSON response 1`] = `
"GET bad-path responded 500 Just the worst: 

Message:

  Server error 1
Magento PHP stack trace: 

Server error 1 trace
"
`;

exports[`recovers when error properties cannot be parsed 1`] = `
"GET bad-path responded 500 Just the worst: 

<p>I am unparseable</p>"
`;
